# docs/swagger.yaml
@@ -855,6 +855,45 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get metrics of MergeTree in ClickHouse
+  /api/v1/ck/table_schemer/{clusterName}:
+    get:
+      description: show create table
+      parameters:
+      - description: request body
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/model.ArchiveTableReq'
+      - default: test
+        description: cluster name
+        in: path
+        name: clusterName
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{"retCode":0,"retMsg":"ok","entity":"{\"create_table_query\":
+            \"CREATE TABLE default.apache_access_log (`@collectiontime` DateTime,
+            `@hostname` LowCardinality(String), `@ip` LowCardinality(String), `@path`
+            String, `@lineno` Int64, `@message` String, `agent` String, `auth` String,
+            `bytes` Int64, `clientIp` String, `device_family` LowCardinality(String),
+            `httpversion` LowCardinality(String), `ident` String, `os_family` LowCardinality(String),
+            `os_major` LowCardinality(String), `os_minor` LowCardinality(String),
+            `referrer` String, `request` String, `requesttime` Float64, `response`
+            LowCardinality(String), `timestamp` DateTime64(3), `userAgent_family`
+            LowCardinality(String), `userAgent_major` LowCardinality(String), `userAgent_minor`
+            LowCardinality(String), `verb` LowCardinality(String), `xforwardfor` LowCardinality(String))
+            ENGINE = ReplicatedMergeTree(''/clickhouse/tables/{cluster}/{shard}/default/apache_access_log'',
+            ''{replica}'') PARTITION BY toYYYYMMDD(timestamp) ORDER BY (timestamp,
+            `@hostname`, `@path`, `@lineno`) SETTINGS index_granularity = 8192 │ ReplicatedMergeTree(''/clickhouse/tables/{cluster}/{shard}/default/apache_access_log'',
+            ''{replica}'') PARTITION BY toYYYYMMDD(timestamp) ORDER BY (timestamp,
+            `@hostname`, `@path`, `@lineno`) SETTINGS index_granularity = 8192\"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: show create table
   /api/v1/ck/upgrade/{clusterName}:
     put:
       description: Upgrade ClickHouse cluster
